Version updates + Java 11 compatibility